--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
+    "twilio": "^3.81.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
